# mini_gpt

./: .gitignore  README.md  data.py  model.py  pyproject.toml  run.sh  summary.py  train_parallel_data.py  train_single.py
input/: 1.txt  2.txt  x.txt
input/harry_potter/: 1.txt  2.txt  4.txt
