[project]
name = "mini-gpt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dataclasses>=0.8",
    "flax>=0.10.2",
    "jax>=0.5.0",
    "ml-collections>=1.0.0",
    "optax>=0.2.4",
    "tabulate>=0.9.0",
    "tiktoken>=0.8.0",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
]


[project.optional-dependencies]
gpu = ["jax[cuda12]>=0.5.0"] 
mac = ["jax-metal>=0.1.1"]
